Reduce pre-transition opacity to prevent visible change in aspect ratio

--- a/common/styles/components/_lazyload.scss
+++ b/common/styles/components/_lazyload.scss
@@ -1,5 +1,5 @@
 .lazy-image.lazy-image {
-  opacity: 0.6;
+  opacity: 0;
   transition: opacity $transition-properties;
 
   .enhanced & {
